# beancount-timesheets

./: .gitignore  README.md  invoice.beancount  pyproject.toml
example/: ExampleCustomer_2026-04-01_2026-04-27.beancount  beancount-timesheets-config.yml  config.yml  current.beancount  invoice_template.html  ledger.beancount  timesheet.beancount  timesheet.beancount.bkp
src/beancount_timesheets/: __init__.py  core.py  file_period.py  generate_invoice.py  invoice.py  period.py
tests/: conftest.py  test_file_period.py  test_generate_invoice.py  test_invoice.py  test_period.py
