[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beancount-timesheets"
version = "0.1.0"
description = "Core logic for time tracking, period filing, and invoice generation for Beancount."
authors = [
    { name = "cal" }
]
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "beancount",
    "PyYAML",
    "Jinja2",
    "pdfkit",
    "typer"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
file-period = "beancount_timesheets.file_period_cli:main"
generate-invoice = "beancount_timesheets.generate_invoice_cli:main"

[project.urls]
Homepage = "https://github.com/callumwalley/beancount-timesheets"
